# en

./: .gitignore  README.md  SPEC.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-apk.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs
src/components/: Arena.tsx  CompetitorCard.tsx  ConfigPanel.tsx  JudgePanel.tsx  PublicChat.tsx  QuestionInput.tsx  RuleEditor.tsx  ScoreBoard.tsx  SnapshotPanel.tsx
src/services/: apiKeyManager.ts
src/services/ai_adapters/: universal.ts
src/stores/: arenaStore.ts
src/types/: index.ts
