[package]
name = "ai-tavern-arena"
version = "1.0.0"
description = "AI Tavern Arena - 7大模型竞技对决"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_tavern_arena_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
